@@ -24,10 +24,15 @@
 #' @slot working_path Working directory. By default the working directory is 
 #' defined with the `getwd()` function.
 #' @slot simple_arborescence logical allowing to create a simple arborescence 
-#' of directory. All library ids are on the same directory. Default value is 
-#' `FALSE`. Do not use `TRUE` if you plan to generate expression calls for the 
-#' same library using different transcriptomes or gene annotations, otherwise 
-#' you will overwrite previous results
+#' of directory. If `TRUE` (default), all results will be on the same directory 
+#' (working_path/intergenic_release/all_results/libraryId). Use `FALSE` if you 
+#' plan to generate expression calls for the same library using different
+#' transcriptomes or gene annotations, otherwise you will overwrite previous results.
+#' When `FALSE` the path to result folder looks like : 
+#' working_path/intergenic_release/speciesId/kallisto/transcriptome_name/annotation_name/libraryId
+#' @slot output_dir (optional) Allows to manually define your output directory.
+#' By default the path to output directory is created automatically from the
+#' working_path (working_path/intergenic_release/all_results/libraryId/). 
 
 UserMetadata <- setClass(
     # Set the name for the class
@@ -44,14 +49,15 @@ UserMetadata <- setClass(
         annotation_name = "character",
         annotation_object = "GRanges",
         working_path = "character",
-        simple_arborescence = "logical"
+        simple_arborescence = "logical",
+        output_dir = "character"
     ),
     
     # Set the default values for the slots.
     prototype = prototype(
         working_path = getwd(),
         reads_size = 51,
-        simple_arborescence = FALSE
+        simple_arborescence = TRUE,
         output_dir = NULL
     )
 )
